<resources>
    <string name="app_name">Espresso_Demonstration</string>
</resources>
